--- a/package.json
+++ b/package.json
@@ -16,11 +16,17 @@
     "@react-navigation/native-stack": "^7.3.26",
     "@shopify/flash-list": "^2.1.0",
     "@tanstack/react-query": "^5.90.2",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^13.3.3",
     "react": "19.1.0",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "^2.28.0",
+    "react-native-keyboard-controller": "^1.18.6",
+    "react-native-keychain": "^10.0.0",
+    "react-native-reanimated": "^4.1.2",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.16.0",
+    "react-native-worklets": "^0.6.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
